--- a/CaroGame/CaroGame.vcxproj
+++ b/CaroGame/CaroGame.vcxproj
@@ -127,7 +127,29 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AI.cpp" />
+    <ClCompile Include="Board.cpp" />
     <ClCompile Include="CaroGame.cpp" />
+    <ClCompile Include="InputHandle.cpp" />
+    <ClCompile Include="MainMenu.cpp" />
+    <ClCompile Include="Navigate.cpp" />
+    <ClCompile Include="SaveLoad.cpp" />
+    <ClCompile Include="View.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="AI.h" />
+    <ClInclude Include="Audio.h" />
+    <ClInclude Include="Board.h" />
+    <ClInclude Include="InputHandle.h" />
+    <ClInclude Include="MainMenu.h" />
+    <ClInclude Include="Navigate.h" />
+    <ClInclude Include="SaveLoad.h" />
+    <ClInclude Include="Timer.h" />
+    <ClInclude Include="View.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="Features.md" />
+    <Text Include="TODO.md" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
