--- a/CaroGame/CaroGame.vcxproj.filters
+++ b/CaroGame/CaroGame.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="InputHandle.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Timer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="View.h">
