--- a/CaroGame/CaroGame.vcxproj
+++ b/CaroGame/CaroGame.vcxproj
@@ -142,7 +142,9 @@
     <ClCompile Include="MainMenu.cpp" />
     <ClCompile Include="Navigate.cpp" />
     <ClCompile Include="SaveLoad.cpp" />
+    <ClCompile Include="StartUp.cpp" />
     <ClCompile Include="Timer.cpp" />
+    <ClCompile Include="Utils.cpp" />
     <ClCompile Include="View.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -160,10 +162,13 @@
     <ClInclude Include="MainMenu.h" />
     <ClInclude Include="Navigate.h" />
     <ClInclude Include="SaveLoad.h" />
+    <ClInclude Include="StartUp.h" />
     <ClInclude Include="Timer.h" />
+    <ClInclude Include="Utils.h" />
     <ClInclude Include="View.h" />
   </ItemGroup>
   <ItemGroup>
+    <Text Include="asset\language\en.txt" />
     <Text Include="asset\language\vi.txt" />
     <Text Include="Features.md" />
     <Text Include="TODO.md" />
