Removed old board files

--- a/CaroGame/CaroGame.vcxproj
+++ b/CaroGame/CaroGame.vcxproj
@@ -70,6 +70,7 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" />
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -131,16 +132,11 @@
     <ClCompile Include="About.cpp" />
     <ClCompile Include="AI.cpp" />
     <ClCompile Include="Audio.cpp" />
-    <ClCompile Include="Board.cpp" />
-    <ClCompile Include="BoardContainer.cpp" />
     <ClCompile Include="CaroGame.cpp" />
     <ClCompile Include="Config.cpp" />
     <ClCompile Include="Demo.cpp" />
     <ClCompile Include="FileHandle.cpp" />
-    <ClCompile Include="GameScreen.cpp" />
-    <ClCompile Include="GameView.cpp" />
     <ClCompile Include="InputHandle.cpp" />
-    <ClCompile Include="Label.cpp" />
     <ClCompile Include="Language.cpp" />
     <ClCompile Include="Logic.cpp" />
     <ClCompile Include="MainMenu.cpp" />
@@ -156,29 +152,20 @@
     <ClInclude Include="About.h" />
     <ClInclude Include="AI.h" />
     <ClInclude Include="Audio.h" />
-    <ClInclude Include="Board.h" />
-    <ClInclude Include="BoardContainer.h" />
     <ClInclude Include="Config.h" />
     <ClInclude Include="Constants.h" />
     <ClInclude Include="FileHandle.h" />
-    <ClInclude Include="GameScreen.h" />
     <ClInclude Include="GameState.h" />
-    <ClInclude Include="GameView.h" />
     <ClInclude Include="InputHandle.h" />
-    <ClInclude Include="Label.h" />
     <ClInclude Include="Language.h" />
-    <ClInclude Include="LogContainer.h" />
     <ClInclude Include="Logic.h" />
     <ClInclude Include="MainMenu.h" />
     <ClInclude Include="Navigate.h" />
-    <ClInclude Include="PlayerContainer.h" />
-    <ClInclude Include="PlayerInfoContainer.h" />
     <ClInclude Include="SaveLoad.h" />
     <ClInclude Include="Setting.h" />
     <ClInclude Include="StartUp.h" />
     <ClInclude Include="Timer.h" />
     <ClInclude Include="View.h" />
-    <ClInclude Include="WinCountContainer.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="asset\language\en.txt" />
