Deleted old board files, fixed board views

--- a/CaroGame/CaroGame.vcxproj
+++ b/CaroGame/CaroGame.vcxproj
@@ -132,11 +132,17 @@
     <ClCompile Include="About.cpp" />
     <ClCompile Include="AI.cpp" />
     <ClCompile Include="Audio.cpp" />
+    <ClCompile Include="BoardContainer.cpp" />
     <ClCompile Include="CaroGame.cpp" />
     <ClCompile Include="Config.cpp" />
+    <ClCompile Include="Container.cpp" />
+    <ClCompile Include="CornersHandler.cpp" />
     <ClCompile Include="Demo.cpp" />
     <ClCompile Include="FileHandle.cpp" />
+    <ClCompile Include="GameScreen.cpp" />
+    <ClCompile Include="GameView.cpp" />
     <ClCompile Include="InputHandle.cpp" />
+    <ClCompile Include="Label.cpp" />
     <ClCompile Include="Language.cpp" />
     <ClCompile Include="Logic.cpp" />
     <ClCompile Include="MainMenu.cpp" />
@@ -152,11 +158,17 @@
     <ClInclude Include="About.h" />
     <ClInclude Include="AI.h" />
     <ClInclude Include="Audio.h" />
+    <ClInclude Include="BoardContainer.h" />
     <ClInclude Include="Config.h" />
     <ClInclude Include="Constants.h" />
+    <ClInclude Include="Container.h" />
+    <ClInclude Include="CornersHandler.h" />
     <ClInclude Include="FileHandle.h" />
+    <ClInclude Include="GameScreen.h" />
     <ClInclude Include="GameState.h" />
+    <ClInclude Include="GameView.h" />
     <ClInclude Include="InputHandle.h" />
+    <ClInclude Include="Label.h" />
     <ClInclude Include="Language.h" />
     <ClInclude Include="Logic.h" />
     <ClInclude Include="MainMenu.h" />
