--- a/CaroGame/CaroGame.vcxproj.filters
+++ b/CaroGame/CaroGame.vcxproj.filters
@@ -111,6 +111,12 @@
     <ClCompile Include="InputBox.cpp">
       <Filter>Screens\Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GameAction.cpp">
+      <Filter>Core\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Logo.cpp">
+      <Filter>Core\Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="View.h">
@@ -183,6 +189,18 @@
       <Filter>Screens\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Utils.h">
+      <Filter>Core\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GameAction.h">
+      <Filter>Core\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="InputBox.h">
+      <Filter>Core\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="LoadScreen.h">
+      <Filter>Core\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Logo.h">
       <Filter>Core\Header Files</Filter>
     </ClInclude>
   </ItemGroup>
