--- a/CaroGame/CaroGame.vcxproj
+++ b/CaroGame/CaroGame.vcxproj
@@ -153,6 +153,7 @@
     <ClCompile Include="MainMenu.cpp" />
     <ClCompile Include="Navigate.cpp" />
     <ClCompile Include="SaveLoad.cpp" />
+    <ClCompile Include="SaveScreen.cpp" />
     <ClCompile Include="Setting.cpp" />
     <ClCompile Include="StartUp.cpp" />
     <ClCompile Include="Timer.cpp" />
@@ -183,6 +184,7 @@
     <ClInclude Include="MainMenu.h" />
     <ClInclude Include="Navigate.h" />
     <ClInclude Include="SaveLoad.h" />
+    <ClInclude Include="SaveScreen.h" />
     <ClInclude Include="Setting.h" />
     <ClInclude Include="StartUp.h" />
     <ClInclude Include="Timer.h" />
