--- a/CaroGame/CaroGame.vcxproj
+++ b/CaroGame/CaroGame.vcxproj
@@ -133,11 +133,14 @@
     <ClCompile Include="About.cpp" />
     <ClCompile Include="AI.cpp" />
     <ClCompile Include="Audio.cpp" />
+    <ClCompile Include="Avatar.cpp" />
     <ClCompile Include="BoardContainer.cpp" />
+    <ClCompile Include="Captain.cpp" />
     <ClCompile Include="CaroGame.cpp" />
     <ClCompile Include="Config.cpp" />
     <ClCompile Include="Container.cpp" />
     <ClCompile Include="CornersHandler.cpp" />
+    <ClCompile Include="Deadpool.cpp" />
     <ClCompile Include="Demo.cpp" />
     <ClCompile Include="Evaluation.cpp" />
     <ClCompile Include="FileHandle.cpp" />
@@ -151,9 +154,10 @@
     <ClCompile Include="Language.cpp" />
     <ClCompile Include="LoadScreen.cpp" />
     <ClCompile Include="Logic.cpp" />
-    <ClCompile Include="Logo.cpp" />
+    <ClCompile Include="Logo_Caro.cpp" />
     <ClCompile Include="MainMenu.cpp" />
     <ClCompile Include="Navigate.cpp" />
+    <ClCompile Include="Result.cpp" />
     <ClCompile Include="SaveLoad.cpp" />
     <ClCompile Include="SaveScreen.cpp" />
     <ClCompile Include="Setting.cpp" />
@@ -166,11 +170,14 @@
     <ClInclude Include="About.h" />
     <ClInclude Include="AI.h" />
     <ClInclude Include="Audio.h" />
+    <ClInclude Include="Avatar.h" />
     <ClInclude Include="BoardContainer.h" />
+    <ClInclude Include="Captain.h" />
     <ClInclude Include="Config.h" />
     <ClInclude Include="Constants.h" />
     <ClInclude Include="Container.h" />
     <ClInclude Include="CornersHandler.h" />
+    <ClInclude Include="Deadpool.h" />
     <ClInclude Include="Evaluation.h" />
     <ClInclude Include="FileHandle.h" />
     <ClInclude Include="GameAction.h" />
@@ -184,9 +191,10 @@
     <ClInclude Include="Language.h" />
     <ClInclude Include="LoadScreen.h" />
     <ClInclude Include="Logic.h" />
-    <ClInclude Include="Logo.h" />
+    <ClInclude Include="Logo_Caro.h" />
     <ClInclude Include="MainMenu.h" />
     <ClInclude Include="Navigate.h" />
+    <ClInclude Include="Result.h" />
     <ClInclude Include="SaveLoad.h" />
     <ClInclude Include="SaveScreen.h" />
     <ClInclude Include="Setting.h" />
