--- a/CaroGame/CaroGame.vcxproj
+++ b/CaroGame/CaroGame.vcxproj
@@ -157,6 +157,8 @@
     <ClCompile Include="Logo_Caro.cpp" />
     <ClCompile Include="MainMenu.cpp" />
     <ClCompile Include="Navigate.cpp" />
+    <ClCompile Include="ReplayLoad.cpp" />
+    <ClCompile Include="ReplaySave.cpp" />
     <ClCompile Include="Result.cpp" />
     <ClCompile Include="SaveLoad.cpp" />
     <ClCompile Include="SaveScreen.cpp" />
@@ -194,6 +196,8 @@
     <ClInclude Include="Logo_Caro.h" />
     <ClInclude Include="MainMenu.h" />
     <ClInclude Include="Navigate.h" />
+    <ClInclude Include="ReplayLoad.h" />
+    <ClInclude Include="ReplaySave.h" />
     <ClInclude Include="Result.h" />
     <ClInclude Include="SaveLoad.h" />
     <ClInclude Include="SaveScreen.h" />
